修复@Deprecated(since="9")的调用